--- a/src/main/resources/assets/erontcg/models/item/sapphire.json
+++ b/src/main/resources/assets/erontcg/models/item/sapphire.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "honahula:item/sapphire"
+    "layer0": "erontcg:item/sapphire"
   }
 }
